--- a/config.yml
+++ b/config.yml
@@ -355,7 +355,7 @@ Karabo_bridge:
       #   type: decimal
       #   unit: percent
 
-      attenuator_SASE1_XTD2_transmission:
+      SASE1_XTD2_transmission:
         description: XTD2 transmission
         key: actual.value.transmission
         type: decimal
@@ -430,55 +430,55 @@ Karabo_bridge:
       source: SPB_IRU_LIQUIDJET/MDL/MANIFOLD_VALVES
       action: check_if_constant
 
-      sample_delivery_manifold_valves_config0_valve_group_name:
+      sample_delivery_config0_valve_group_name:
         key: valvesConfigTable.value[0].valveGroupName
         type: str
-      sample_delivery_manifold_valves_config0_valve_indices:
+      sample_delivery_config0_valve_indices:
         key: valvesConfigTable.value[0].valveIds
         type: list[str]
         action_axis: 0
-      sample_delivery_manifold_valves_config0_positions:
+      sample_delivery_config0_positions:
         key: valvesConfigTable.value[0].nPositions
         type: int
-      sample_delivery_manifold_valves_config0_labels:
+      sample_delivery_config0_labels:
         key: valvesConfigTable.value[0].labels
         type: list[str]
 
-      sample_delivery_manifold_valves_config1_valve_group_name:
+      sample_delivery_config1_valve_group_name:
         key: valvesConfigTable.value[1].valveGroupName
         type: str
-      sample_delivery_manifold_valves_config1_valve_indices:
+      sample_delivery_config1_valve_indices:
         key: valvesConfigTable.value[1].valveIds
         type: list[str]
         action_axis: 0
-      sample_delivery_manifold_valves_config1_positions:
+      sample_delivery_config1_positions:
         key: valvesConfigTable.value[1].nPositions
         type: int
-      sample_delivery_manifold_valves_config1_labels:
+      sample_delivery_config1_labels:
         key: valvesConfigTable.value[1].labels
         type: list[str]
 
-      sample_delivery_manifold_valves_config2_valve_group_name:
+      sample_delivery_config2_valve_group_name:
         key: valvesConfigTable.value[2].valveGroupName
         type: str
-      sample_delivery_manifold_valves_config2_valve_indices:
+      sample_delivery_config2_valve_indices:
         key: valvesConfigTable.value[2].valveIds
         type: list[str]
         action_axis: 0
-      sample_delivery_manifold_valves_config2_positions:
+      sample_delivery_config2_positions:
         key: valvesConfigTable.value[2].nPositions
         type: int
-      sample_delivery_manifold_valves_config2_labels:
+      sample_delivery_config2_labels:
         key: valvesConfigTable.value[2].labels
         type: list[str]
 
-      sample_delivery_manifold_valves_groupA_position:
+      sample_delivery_groupA_position:
         key: GROUPA.currentPosition.value
         type: int
-      sample_delivery_manifold_valves_sample1_position:
+      sample_delivery_sample1_position:
         key: SPB_IRU_LIQUIDJETVALVEVALVE_SAMPLE_1.currentPosition.value
         type: int
-      sample_delivery_manifold_valves_sample2_position:
+      sample_delivery_sample2_position:
         key: SPB_IRU_LIQUIDJETVALVEVALVE_SAMPLE_2.currentPosition.value
         type: int
 
@@ -526,7 +526,7 @@ Karabo_bridge:
       source: SPB_IRU_INJMOV/MOTOR/Z
       action: check_if_constant
 
-      sample_delivery_injector_sample_delivery_injector_position_z:
+      sample_delivery_injector_position_z:
         description: Injector position z [mm]
         key: actualPosition.value
         type: decimal
