CI: remove amici integration test (it’s not used anyways)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,17 +75,17 @@ deploy-pypi:
     - python setup.py sdist bdist_wheel
     - TWINE_PASSWORD=${CI_JOB_TOKEN} TWINE_USERNAME=gitlab-ci-token python -m twine upload --skip-existing --repository-url https://gitlab.desy.de/api/v4/projects/${CI_PROJECT_ID}/packages/pypi dist/*
 
-integration-amici:
-  image: $AMARCORD_PYTHON_DOCKER
-  stage: test-deploy
-  only:
-    - tags
-    - master
-  script:
-    - pip install -e .
-    - pip install --upgrade --extra-index-url https://maxwell-token:JUX_f_ivQjyZbxZAEPYi@gitlab.desy.de/api/v4/projects/${CI_PROJECT_ID}/packages/pypi/simple amarcord
-    - python integration/amici_test.py
-
+#integration-amici:
+#  image: $AMARCORD_PYTHON_DOCKER
+#  stage: test-deploy
+#  only:
+#    - tags
+#    - master
+#  script:
+#    - pip install -e .
+#    - pip install --upgrade --extra-index-url https://maxwell-token:JUX_f_ivQjyZbxZAEPYi@gitlab.desy.de/api/v4/projects/${CI_PROJECT_ID}/packages/pypi/simple amarcord
+#    - python integration/amici_test.py
+#
 # Docker images were a thing, but only to convert it to singularity.
 # However, since singularity is hard to build and behaved weirdly, might as well ditch the images
 #upload-gui-docker-image:
