--- a/environment.yml
+++ b/environment.yml
@@ -26,6 +26,7 @@ dependencies:
     - cffi==1.14.5
     - isodate==0.6.0
     - karabo-bridge==0.6.0
+    - extra_data==1.5.0
     - lark-parser==0.11.2
     - mako==1.1.4
     - markupsafe==1.1.1
