--- a/config.yml
+++ b/config.yml
@@ -448,10 +448,10 @@ Karabo_bridge:
       sample_delivery_config0_valve_group_name:
         key: valvesConfigTable.value[0].valveGroupName
         type: str
-      sample_delivery_config0_valve_indices:
-        key: valvesConfigTable.value[0].valveIds
-        type: list[str]
-        action_axis: 0
+#      sample_delivery_config0_valve_indices:
+#        key: valvesConfigTable.value[0].valveIds
+#        type: list[str]
+#        action_axis: 0
       sample_delivery_config0_positions:
         key: valvesConfigTable.value[0].nPositions
         type: int
@@ -462,10 +462,10 @@ Karabo_bridge:
       sample_delivery_config1_valve_group_name:
         key: valvesConfigTable.value[1].valveGroupName
         type: str
-      sample_delivery_config1_valve_indices:
-        key: valvesConfigTable.value[1].valveIds
-        type: list[str]
-        action_axis: 0
+#      sample_delivery_config1_valve_indices:
+#        key: valvesConfigTable.value[1].valveIds
+#        type: list[str]
+#        action_axis: 0
       sample_delivery_config1_positions:
         key: valvesConfigTable.value[1].nPositions
         type: int
@@ -476,10 +476,10 @@ Karabo_bridge:
       sample_delivery_config2_valve_group_name:
         key: valvesConfigTable.value[2].valveGroupName
         type: str
-      sample_delivery_config2_valve_indices:
-        key: valvesConfigTable.value[2].valveIds
-        type: list[str]
-        action_axis: 0
+#      sample_delivery_config2_valve_indices:
+#        key: valvesConfigTable.value[2].valveIds
+#        type: list[str]
+#        action_axis: 0
       sample_delivery_config2_positions:
         key: valvesConfigTable.value[2].nPositions
         type: int
