--- a/requirements.txt
+++ b/requirements.txt
@@ -1,103 +1,70 @@
-alembic==1.5.4
-altgraph==0.17
+alembic==1.5.8
+-e git+git@gitlab.desy.de:cfel-sc/amarcord-parent/amarcord-xfel.git@57259e8ebf7c19694985d7fe803c909de31e1302#egg=amarcord
 appdirs==1.4.4
-aspy.refactor-imports==2.1.1
-astroid==2.4.2
-attrs==20.3.0
+astroid==2.5.3
 bcrypt==3.2.0
 black==20.8b1
-cached-property==1.5.2
-certifi==2020.12.5
-cfelpyutils==1.0.0
-cffi==1.14.4
-chardet==4.0.0
+cffi==1.14.5
 click==7.1.2
-coverage==5.5
-cryptography==3.4.3
+cryptography==3.4.7
 cycler==0.10.0
-EXtra-data==1.3.0
+EXtra-data==1.5.0
 fabio==0.11.0
 Flask==1.1.2
 Flask-Cors==3.0.10
-future==0.18.2
-gprof2dot==2021.2.21
-h5py==3.1.0
+Flask-HTTPAuth==4.2.0
+gunicorn==20.1.0
+h5py==3.2.1
 humanize==3.2.0
-hypothesis==6.3.0
-idna==2.10
-iniconfig==1.1.1
+imageio==2.9.0
 isodate==0.6.0
-isort==5.7.0
+isort==5.8.0
 itsdangerous==1.1.0
-jedi==0.17.2
 Jinja2==2.11.3
 karabo-bridge==0.6.0
-karabo-data==0.7.0
 kiwisolver==1.3.1
-lark==0.11.1
-lazy-object-proxy==1.4.3
-macholib==1.14
+lark-parser==0.11.2
+lazy-object-proxy==1.6.0
 Mako==1.1.4
 MarkupSafe==1.1.1
 matplotlib==3.3.4
 mccabe==0.6.1
-metadata-client==3.0.8
 msgpack==1.0.2
 msgpack-numpy==0.4.7.1
 msgpack-types==0.1.0
-mypy==0.800
+mypy==0.812
 mypy-extensions==0.4.3
 numpy==1.19.5
-oauth2-xfel-client==6.0.0
-oauthlib==3.1.0
-outcome==1.1.0
 packaging==20.9
-pandas==1.2.1
-parso==0.7.1
+pandas==1.2.3
 pathspec==0.8.1
-pefile==2019.4.18
-Pillow==8.1.0
+Pillow==8.2.0
 Pint==0.16.1
-pluggy==0.13.1
 psutil==5.8.0
 PubChemPy==1.0.4
-py==1.10.0
 pycparser==2.20
-pyinstaller-hooks-contrib==2021.1
-pylint==2.6.0
-pyls==0.1.6
-pyls-mypy==0.1.8
+pylint==2.7.4
 PyMySQL==1.0.2
 pyparsing==2.4.7
-PyQt5==5.15.2
+PyQt5==5.15.4
+PyQt5-Qt5==5.15.2
 PyQt5-sip==12.8.1
-PyQt5-stubs==5.14.2.2
-pytest==6.2.2
-pytest-cov==2.11.1
-pytest-qt==3.3.0
+PyQt5-stubs==5.15.2.0
 python-dateutil==2.8.1
 python-editor==1.0.4
-python-jsonrpc-server==0.4.0
-python-language-server==0.36.2
-pytz==2020.5
+pytz==2021.1
 PyYAML==5.4.1
-pyzmq==22.0.1
-regex==2020.11.13
-reorder-python-imports==2.4.0
-Represent==1.6.0.post0
-requests==2.25.1
-requests-oauthlib==1.3.0
-scipy==1.6.0
+pyzmq==22.0.3
+regex==2021.4.4
 six==1.15.0
-sortedcontainers==2.3.0
-SQLAlchemy==1.3.23
+SQLAlchemy==1.3.24
 sqlalchemy-stubs==0.4
 toml==0.10.2
-typed-ast==1.4.2
+typed-argument-parser==1.6.2
+typed-ast==1.4.3
 typing-extensions==3.7.4.3
-ujson==4.0.2
-urllib3==1.26.3
+typing-inspect==0.6.0
 Werkzeug==1.0.1
 wrapt==1.12.1
-xarray==0.16.2
+xarray==0.17.0
 xdg==5.0.1
