P11: first version of filesystem ingester

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ run-migrations:
     - pip install -e .
     - python amarcord/cli/admin.py --connection-url="sqlite://" migrate
 
-integration-tests:
+tests:
   image: $AMARCORD_PYTHON_DOCKER
   stage: integration
   variables:
@@ -48,7 +48,7 @@ integration-tests:
     - apt-get update -y
     - apt-get install -y libgl1-mesa-glx qt5-default
     - pip install -e .[gui]
-    - pip install 'pytest==6.2.*' 'pytest-qt==3.3.*' 'hypothesis==6.3.*' 'pytest-cov==2.11.*'
+    - pip install 'pytest==6.2.*' 'pytest-qt==3.3.*' 'hypothesis==6.3.*' 'pytest-cov==2.11.*' 'pyfakefs==4.4.*'
     - PYTHONPATH=".:$PYTHONPATH" pytest --cov=amarcord/ --junitxml=report.xml tests
     - coverage xml
   artifacts:
