--- a/mypy.ini
+++ b/mypy.ini
@@ -15,6 +15,8 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-pint]
 ignore_missing_imports = True
+[mypy-pint.quantity]
+ignore_missing_imports = True
 [mypy-isodate]
 ignore_missing_imports = True
 [mypy-setuptools]
