--- a/purescript-frontend/package.json
+++ b/purescript-frontend/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "build": "spago build",
-    "serve": "http-server dist & parcel serve dev/index.html",
+    "serve": "parcel serve dev/index.html",
     "build-prod": "mkdir -p prod && cp -R dev/index.html dev/webfonts dev/css dev/favicon.png static/* prod/ && rm -rf dist && spago --no-color bundle-app --to prod/index.js && parcel build prod/index.html"
   },
   "dependencies": {
