--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,41 @@
 alembic==1.5.8
+-e git+git@gitlab.desy.de:cfel-sc/amarcord-parent/amarcord-xfel.git@31e6af8916d4cec0d43610fa67f977855d0d66e5#egg=amarcord
 appdirs==1.4.4
-astroid==2.5.3
+astroid==2.5.7
+atlassian-python-api==3.9.1
 bcrypt==3.2.0
+beautifulsoup4==4.9.3
 black==20.8b1
+certifi==2020.12.5
 cffi==1.14.5
+chardet==4.0.0
 click==7.1.2
 cryptography==3.4.7
 cycler==0.10.0
+Deprecated==1.2.12
+dhall==0.1.7
 EXtra-data==1.5.0
 fabio==0.11.0
-Flask==1.1.2
+Flask==2.0.1
 Flask-Cors==3.0.10
 Flask-HTTPAuth==4.2.0
+gprof2dot==2021.2.21
 gunicorn==20.1.0
 h5py==3.2.1
 humanize==3.2.0
+idna==2.10
 imageio==2.9.0
 isodate==0.6.0
 isort==5.8.0
-itsdangerous==1.1.0
-Jinja2==2.11.3
+itsdangerous==2.0.1
+Jinja2==3.0.1
 karabo-bridge==0.6.0
 kiwisolver==1.3.1
 lark-parser==0.11.2
 lazy-object-proxy==1.6.0
+lxml==4.6.3
 Mako==1.1.4
-MarkupSafe==1.1.1
+MarkupSafe==2.0.1
 matplotlib==3.3.4
 mccabe==0.6.1
 msgpack==1.0.2
@@ -34,6 +44,7 @@ msgpack-types==0.1.0
 mypy==0.812
 mypy-extensions==0.4.3
 numpy==1.19.5
+oauthlib==3.1.0
 packaging==20.9
 pandas==1.2.3
 pathspec==0.8.1
@@ -43,9 +54,10 @@ psutil==5.8.0
 PubChemPy==1.0.4
 pycparser==2.20
 pyfakefs==4.4.0
-pylint==2.7.4
+pylint==2.8.2
 PyMySQL==1.0.2
 pyparsing==2.4.7
+pyprof2calltree==1.4.5
 PyQt5==5.15.4
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.8.1
@@ -56,7 +68,11 @@ pytz==2021.1
 PyYAML==5.4.1
 pyzmq==22.0.3
 regex==2021.4.4
+requests==2.25.1
+requests-oauthlib==1.3.0
+Rx==3.2.0
 six==1.15.0
+soupsieve==2.2.1
 SQLAlchemy==1.3.24
 sqlalchemy-stubs==0.4
 toml==0.10.2
@@ -64,7 +80,8 @@ typed-argument-parser==1.6.2
 typed-ast==1.4.3
 typing-extensions==3.7.4.3
 typing-inspect==0.6.0
-Werkzeug==1.0.1
+urllib3==1.26.4
+Werkzeug==2.0.1
 wrapt==1.12.1
 xarray==0.17.0
 xdg==5.0.1
